tests/snapshots/system_add_tests__add_no_workflow_config.snap
---
source: tests/system_add_tests.rs
expression: normalize_config(&config)
---

app_name: "AddTest"
steps:
  existing:
    command: "rustc --version"
  bundle-install:
    template: bundle-install
    # command: bundle install
workflows:
  default:
    steps: [existing]
