tests/snapshots/system_add_tests__add_to_different_workflows_sequentially_config.snap
---
source: tests/system_add_tests.rs
expression: normalize_config(&config)
---

app_name: "AddTest"
steps:
  existing:
    command: "rustc --version"
  bundle-install:
    template: bundle-install
    # command: bundle install
  cargo-build:
    template: cargo-build
    # command: cargo build
workflows:
  default:
    steps: [existing, bundle-install]
  ci:
    steps: [existing, cargo-build]
