tests/snapshots/system_add_tests__multi_step_add_with_different_flags_config.snap
---
source: tests/system_add_tests.rs
expression: normalize_config(&config)
---

app_name: "AddTest"
steps:
  existing:
    command: "rustc --version"
  bundle-install:
    template: bundle-install
    # command: bundle install
    # completed_check:
    #   type: command_succeeds
    #   command: "bundle check"
    # watches: [Gemfile, Gemfile.lock]
  build_ci:
    template: cargo-build
    # command: cargo build
    # completed_check:
    #   type: file_exists
    #   path: "target"
    # watches: [Cargo.toml, Cargo.lock]
workflows:
  default:
    steps: [existing, bundle-install]
  ci:
    steps: [existing, build_ci]
